# agent-manus

./: .gitignore  .replit  main.py  pyproject.toml  replit.md  setup.sh  test_output.txt
agent_core/: __init__.py  access_control.py  agent_loop.py  context_manager.py  data_privacy.py  knowledge_base.py  llm_client.py  main.py  meta_learner.py  planner.py  rlhf_engine.py  security_manager.py  tool_selector.py  user_manager.py
attached_assets/: Roadmap_Teknis_Manus__Sebuah_Agen_AI_Generik_yang__1771494799550.md
config/: settings.yaml  tool_configs.json
data/: .privacy_key  access_accounts.json  knowledge_base.db  rlhf_feedback.json  rlhf_policy.json  scheduled_tasks.json  test_kb.db  user_profiles.json
data/presentations/: test_presentation_1771573073.html
data/spreadsheets/: test_data_1771573061.csv
mcp/: __init__.py  client.py  protocol.py  providers.py  registry.py  server.py  transport.py
monitoring/: monitor.py
myapp/: .gitignore  app.py
myapp/templates/: index.html
sandbox_env/: __init__.py  package_manager.py  runtime_executor.py  shell_session.py  vm_manager.py
scripts/: setup.sh
skills/another_skill/: SKILL.md
skills/code_analyzer/: SKILL.md  config.json
skills/skill_creator/: SKILL.md
skills/system_monitor/: SKILL.md  (+1 more)
tests/: test_framework.py
tools/: __init__.py  api_tool.py  browser_tool.py  database_tool.py  file_tool.py  generate_tool.py  message_tool.py  playbook_manager.py  schedule_tool.py  search_tool.py  shell_tool.py  skill_manager.py  slides_tool.py  spreadsheet_tool.py  webdev_tool.py
web/: database.py  server.py
(+6 files in other folders)
