[project]
name = "manus-agent"
version = "1.0.0"
description = "Autonomous AI Agent Framework with multimodal tools"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "fastapi>=0.110.0",
    "mutagen>=1.47.0",
    "Pillow>=10.0.0",
    "playwright>=1.40.0",
    "prompt-toolkit>=3.0.40",
    "psycopg2-binary>=2.9.0",
    "PyPDF2>=3.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "uvicorn>=0.27.0",
]

[tool.uv]
compile-bytecode = true
